Add toast support

--- a/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
+++ b/IPSX/Flows/Register/Storyboard/LegalDetails.storyboard
@@ -632,6 +632,9 @@
                         <outlet property="doneButton" destination="nHR-kn-9sE" id="j5W-WC-BQg"/>
                         <outlet property="emailRtextField" destination="uug-gr-94b" id="wrX-UN-K25"/>
                         <outlet property="phoneRTextField" destination="5Ge-Ef-tqw" id="E5f-Nw-bIz"/>
+                        <outlet property="topBarView" destination="7iZ-gQ-6xZ" id="cXF-Tq-ruw"/>
+                        <outlet property="topConstraintOutlet" destination="eeb-cg-MxK" id="0CS-ui-xKX"/>
+                        <outlet property="topSeparatorView" destination="dEa-wn-NNo" id="34c-Rq-GsP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LI6-q8-lo0" userLabel="First Responder" sceneMemberID="firstResponder"/>
