Update edit profile with corporate error handling

--- a/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Base.lproj/Profile.storyboard
@@ -343,7 +343,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="348" height="66"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <connections>
-                                                            <segue destination="6SN-EC-ick" kind="presentation" identifier="LegalDetailsSegueID" id="bIg-UX-Hnu"/>
+                                                            <action selector="corporateDetailsAction:" destination="Pyt-cD-jav" eventType="touchUpInside" id="n9u-KY-zea"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -458,6 +458,7 @@
                         <outlet property="topBarView" destination="San-8X-eiY" id="8Ef-nF-yKm"/>
                         <outlet property="topConstraintOutlet" destination="vb4-He-Pd3" id="2B6-Up-uYm"/>
                         <segue destination="2Zn-LV-orH" kind="show" identifier="SearchSegueID" id="Ztv-In-Qmr"/>
+                        <segue destination="6SN-EC-ick" kind="presentation" identifier="LegalDetailsSegueID" id="imO-4I-MN8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S5g-DR-tIA" userLabel="First Responder" sceneMemberID="firstResponder"/>
