update Individual/legal option for Fb Register

--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -426,6 +426,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nx9-zq-FVY">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="44"/>
                                         <state key="normal" image="rcheckBoxEmpty"/>
+                                        <state key="disabled" image="rcheckBoxChecked"/>
                                         <state key="selected" title="UnderstandRisk" image="rcheckBoxChecked">
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -550,6 +551,7 @@
                         <outlet property="backgroundImageView" destination="Jyq-XU-knM" id="4Be-5B-wFP"/>
                         <outlet property="individualCheckButton" destination="nx9-zq-FVY" id="gbq-sq-0VT"/>
                         <outlet property="legalCheckButton" destination="uAe-Yp-ebf" id="jTb-9f-kb7"/>
+                        <outlet property="legalSelectorView" destination="FsG-8v-yh7" id="MQi-As-wOw"/>
                         <outlet property="loadingView" destination="c05-Gj-MdM" id="BPd-UA-RbE"/>
                         <outlet property="registerButton" destination="zJr-kv-cZI" id="MKM-zt-x9x"/>
                         <outlet property="separatorView" destination="7or-DF-D72" id="ybL-9x-3GV"/>
